# Pluses

./: .clang-tidy  .gitmodules  .testenv-beta-ci.yml  .testenv-ci.yml  CMakeLists.txt  LECTURES.md  README.md  SCORE.md  SETUP.md  STYLEGUIDE.md  submit.py
cmake/: FindCatch.cmake
deadlines/: knad.yml  pmi.yml
lectures/: lecture13.cpp
projects/image_processor/: CMakeLists.txt  color.cpp  color.h  controller.cpp  controller.h  filters.cpp  filters.h  image.cpp  image.h  image_exception.h  image_processor.cpp  image_processor.h  main.cpp  readme.md
projects/image_processor/filters/: base_filter.cpp  base_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  grayscale.cpp  grayscale.h  matrix.cpp  matrix.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
tasks/admission/: admission.cpp
tasks/associative_operation/: .tester.json  associative_operation.cpp
tasks/mines/: minesweeper.cpp  minesweeper.h  readme.md
tasks/multiplication/: .tester.json  multiplication.cpp
tasks/palindrome/: .tester.json  palindrome.cpp
tasks/password/: .tester.json  password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/robot/: CMakeLists.txt  checkers_topology.cpp  checkers_topology.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.cpp  point.h  robot.cpp  robot.h  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: readme.md  scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp  test.cpp
tasks/search2/: CMakeLists.txt  search.h  (+5 more)
(+13 files in other folders)
